fix alignment issueS

--- a/css/blog.css
+++ b/css/blog.css
@@ -70,7 +70,6 @@ div.entry {
 
 #daily-insert {
     background-color: #f2f2f2;
-    padding: 20px;
 }
 
 #maincontent h2 {
